ENTRYSTORE-696 #resolve Fixing insufficient ACL check